# picovga

./: .gitignore  README.md  compute_pll_values.py
kicad/: pipico_vga-cache.lib  pipico_vga-rescue.lib  pipico_vga.kicad_pcb  pipico_vga.kicad_prl  pipico_vga.kicad_pro  pipico_vga.kicad_sch  pipico_vga.pro  pipico_vga.sch  sym-lib-table
kicad/gerber/: pipico_vga-cache.lib
picovga_sw/: CMakeLists.txt  picovga_sw.c  vga.c  vga.h  vga.pio  vga2.pio  vga3.c  vga3.h  vga3.pio
src/: CMakeLists.txt  blink.c  pico_sdk_import.cmake
vga_controller/: vga_controller.kicad_pcb  vga_controller.kicad_prl  vga_controller.kicad_pro  vga_controller.kicad_sch
vga_controller/picovga_controller/: vga_controller-job.gbrjob
